2000-09-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* fortune/datfiles/Makefile.bsd: Really update from NetBSD CVS.

	* battlestar/battlestar.6: Improvements from OpenBSD.
	* battlestar/extern.h: Define ROOMDESC.
	* battlestar/room.c (writedes): Use it.
	* battlestar/battlestar.c: From OpenBSD, make clearer and don't
	increase beenthere[position] beyond ROOMDESC.
	* battlestar/com1.c (news), battlestar/com5.c (kiss),
	battlestar/cypher.c (cypher), battlestar/dayfile.c (dayfile),
	battlestar/globals.c (objdes, objsht), nightfile.c (nightfile):
	Spelling and punctuation corrections or adjustments from OpenBSD.

	* tests/battlestar.test: Test for wizard or anti-wizard users.

2000-09-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* tests/battlestar.in5, tests/battlestar.out5,
	tests/battlestar.in6, tests/battlestar.out6,
	tests/battlestar.err6: New files.
	* tests/battlestar.test: Update.

	* tests/battlestar.test, tests/battlestar.in1,
	tests/battlestar.out1, tests/battlestar.in2,
	tests/battlestar.out2, tests/battlestar.in3,
	tests/battlestar.out3, tests/battlestar.in4,
	tests/battlestar.out4: New files.

	* lib/.cvsignore: New file.
	* morse/.cvsignore: Add morse.

2000-08-22  Joseph S. Myers  <jsm28@cam.ac.uk>

	* hunt/hunt/.cvsignore, hunt/huntd/.cvsignore, mille/.cvsignore,
	monop/.cvsignore, morse/.cvsignore, number/.cvsignore,
	phantasia/.cvsignore, pig/.cvsignore, pom/.cvsignore,
	ppt/.cvsignore, primes/.cvsignore, quiz/.cvsignore,
	quiz/datfiles/.cvsignore, rain/.cvsignore, random/.cvsignore,
	robots/.cvsignore, rogue/.cvsignore, sail/.cvsignore,
	snake/snake/.cvsignore, snake/snscore/.cvsignore,
	tetris/.cvsignore, trek/.cvsignore, worm/.cvsignore,
	worms/.cvsignore, wtf/.cvsignore, wump/.cvsignore: New files.

2000-08-19  Joseph S. Myers  <jsm28@cam.ac.uk>

	* fortune/datfiles/.cvsignore, fortune/fortune/.cvsignore,
	fortune/strfile/.cvsignore, fortune/unstr/.cvsignore,
	gomoku/.cvsignore, hack/.cvsignore, hangman/.cvsignore: New files.
