@@ -1,5 +1,7 @@
 2000-09-07  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* battlestar/extern.h: Put prototypes in alphabetical order.
+
 	* fortune/datfiles/Makefile.bsd: Really update from NetBSD CVS.
 
 	* battlestar/battlestar.6: Improvements from OpenBSD.
